--- a/index.html
+++ b/index.html
@@ -16,10 +16,24 @@
 	</head>
 	<body>
 		<div class="container">
-			<header class="clearfix">
+			<header class="clearfix" >
 				<span>Sample</span>
 				<h1>Sample Layout</h1>
 
+				<form class="cbp-mc-form" align="right">
+					<div class="cbp-mc-column" style="margin-left: 80%;
+							 background-color:  rgba(248,248,255,0.3);">
+
+						<label for="email">Email Address</label>
+						<input id="email" type="email" id="email" name="email" placeholder="jon@doe.com">
+						<label for="password">Password</label>
+						<input type="password" id="password" name="password" placeholder="password">
+						<br>
+						<a id="sect6" class="cbp-fbcurrent">
+							<input id="login" class="cbp-mc-submit cbp-button" type="button" value="Log In" />
+						</a>
+					</div>
+				</form>
 			</header>	
 			<div id="cbp-fbscroller" class="cbp-fbscroller">
 				<nav style="display: none">
@@ -31,87 +45,27 @@
 					<a id="sect6b" href="#fbsection6">Section 6</a>
 					<a id="sect7b" href="#fbsection7">Section 7</a>
 				</nav>
+
 				<section  id="fbsection1">
-						<div class="clearfix" style="
-								background-color:  rgba(248,248,255,0.3);
-   								margin: 0 auto;
-     							">
-							<p class="cbp-text">
-							Bla BLA BLA TEXT BLA BLA BLA BLA BLA Some Info... Lorem ipsum ......
-							</p>
-							<a id="sect2" class="cbp-fbcurrent">
-							<input class="cbp-mc-submit cbp-button" type="button" value="Sign in" />
-							</a>
-							</div>
+
 				</section>
 				<section id="fbsection2">
 
-					<form class="cbp-mc-form">
-						<div class="cbp-mc-column" style="margin-top: 20%;margin-left: 30%;margin-right: 30%;
 
-							 background-color:  rgba(248,248,255,0.3);">
-
-							<label for="email">Email Address</label>
-							<input type="email" id="email" name="email" placeholder="jon@doe.com">
-
-							<a id="sect3" class="cbp-fbcurrent">
-								<input class="cbp-mc-submit cbp-button" type="button" value="Verify" />
-							</a>
-						</div>
-
-					</form>
 				</section>
 				<section id="fbsection3">
-					<form class="cbp-mc-form">
-						<div class="cbp-mc-column" style="margin-top: 20%;margin-left: 30%;margin-right: 30%;">
 
-							<label for="email">Verifying Email........ (Trigger next if valid.)</label>
-							<a id="sect4" class="cbp-fbcurrent">
-								<input class="cbp-mc-submit cbp-button" type="button" value="Next" />
-							</a>
-						</div>
-
-					</form>
 
 				</section>
 				<section id="fbsection4">
-					<form class="cbp-mc-form">
-						<div class="cbp-mc-column" style="margin-top: 20%;margin-left: 30%;margin-right: 30%;
 
-							 background-color:  rgba(248,248,255,0.3);">
-
-							<label for="password">Password</label>
-							<input type="password" id="password" name="password" placeholder="password">
-
-							<a id="sect5" class="cbp-fbcurrent">
-								<input class="cbp-mc-submit cbp-button" type="button" value="Login" />
-							</a>
-						</div>
-
-					</form>
 
 				</section>
 				<section id="fbsection5">
-					<form class="cbp-mc-form">
-						<div class="cbp-mc-column" style="margin-top: 20%;margin-left: 30%;margin-right: 30%;">
 
-							<label for="email">Verifying Password........ (Trigger next if valid.)</label>
-							<a id="sect6" class="cbp-fbcurrent">
-								<input class="cbp-mc-submit cbp-button" type="button" value="Next" />
-							</a>
-						</div>
-					</form>
 				</section>
 				<section id="fbsection6">
-					<form class="cbp-mc-form">
-						<div class="cbp-mc-column" style="margin-top: 20%;margin-left: 30%;margin-right: 30%;">
 
-							<label for="email">.........</label>
-							<a id="sect7" class="cbp-fbcurrent">
-								<input class="cbp-mc-submit cbp-button" type="button" value="Next" />
-							</a>
-						</div>
-					</form>
 				</section>
 				<section id="fbsection7">
 
@@ -135,34 +89,89 @@
 		</script>
 
 		<script type="text/javascript">
-			$('#sect2').click(function() {
-				$('#sect2b').click();
-			});
-		</script>
-		<script type="text/javascript">
-			$('#sect3').click(function() {
-				$('#sect3b').click();
-			});
-		</script>
-		<script type="text/javascript">
-			$('#sect4').click(function() {
-				$('#sect4b').click();
-			});
-		</script>
-		<script type="text/javascript">
-			$('#sect5').click(function() {
-				$('#sect5b').click();
-			});
-		</script>
-		<script type="text/javascript">
-			$('#sect6').click(function() {
+
+
+
+
+			$('#login').click(function() {
 				$('#sect6b').click();
 			});
-		</script>
-		<script type="text/javascript">
-			$('#sect7').click(function() {
-				$('#sect7b').click();
+
+
+			$('#email').focus(function() {
+				var mail = document.getElementById('email').value;
+				var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+				var password = document.getElementById('password').value;
+				if(password.length > 5 && mail.match(mailformat)){
+					$('#sect5b').click();
+				}
+				else if(mail.match(mailformat))
+				{
+					$('#sect3b').click();
+				}
+
+				else
+				{
+					$('#sect2b').click();
+				}
 			});
+			$('#password').focus(function() {
+				var mail = document.getElementById('email').value;
+				var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+				var password = document.getElementById('password').value;
+				if(password.length > 5 && mail.match(mailformat)){
+					$('#sect5b').click();
+				}
+				else if(mail.match(mailformat))
+				{
+					$('#sect3b').click();
+				}
+				else
+				{
+					$('#sect4b').click();
+				}
+			});
+			$('#email').blur(function(){
+				var mail = document.getElementById('email').value;
+				var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+				var password = document.getElementById('password').value;
+				if(password.length > 5 && mail.match(mailformat)){
+					$('#sect5b').click();
+				}
+				else if(mail.match(mailformat))
+				{
+					$('#sect3b').click();
+				}
+
+				else
+				{
+					$('#sect2b').click();
+				}
+
+			});
+			$('#password').blur(function(){
+				var mail = document.getElementById('email').value;
+				var mailformat = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+				var password = document.getElementById('password').value;
+				if(password.length > 5 && mail.match(mailformat)){
+					$('#sect5b').click();
+				}
+				else if(mail.match(mailformat))
+				{
+					$('#sect3b').click();
+				}
+
+				else
+				{
+					$('#sect2b').click();
+				}
+
+			});
+
 		</script>
+
+
+
+
 	</body>
 </html>
