--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script src="js/modernizr.custom.js"></script>
 
 </head>
-<body>
+<body style="
+    overflow:hidden;">
 <div class="container">
 	<header class="clearfix" >
 		<span>Sample</span>
