--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Blueprint: Fixed Background Scrolling Layout</title>
-	<meta name="description" content="Blueprint: Fixed Background Scrolling Layout" />
-	<meta name="keywords" content="background scrolling, fixed background, background-attachment, jquery" />
-	<meta name="author" content="Codrops" />
+	<title>FFUF</title>
+	<meta name="description" content="Sample Layout FFUF" />
 	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
@@ -47,30 +45,13 @@
 			<a id="sect7b" href="#fbsection7">Section 7</a>
 		</nav>
 
-		<section  id="fbsection1">
-
-		</section>
-		<section id="fbsection2">
-
-
-		</section>
-		<section id="fbsection3">
-
-
-		</section>
-		<section id="fbsection4">
-
-
-		</section>
-		<section id="fbsection5">
-
-		</section>
-		<section id="fbsection6">
-
-		</section>
-		<section id="fbsection7">
-
-		</section>
+		<section id="fbsection1"></section>
+		<section id="fbsection2"></section>
+		<section id="fbsection3"></section>
+		<section id="fbsection4"></section>
+		<section id="fbsection5"></section>
+		<section id="fbsection6"></section>
+		<section id="fbsection7"></section>
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -83,13 +64,13 @@
 <script src="js/cbpFixedScrollLayout.min.js"></script>
 
 <script>
-
 	$(function() {
 		cbpFixedScrollLayout.init();
 	});
 </script>
 
 <script type="text/javascript">
+
 	$('#login').click(function() {
 
 		var mail = document.getElementById('email').value;
