--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 	<div style="position: relative; top: 25%;
 	left: 35%;">
 
-		<img id="p1" class="central hidden" src="images/1P.png" />
-		<img id="p2" class="central hidden" src="images/2P.png" />
-		<img id="p3" class="central hidden" src="images/3P.png" />
-		<img id="p4" class="central hidden" src="images/4P.png" />
-		<img id="p5" class="central hidden" src="images/5P.png" />
-		<img id="p6" class="central hidden" src="images/6P.png" />
+		<img id="p1" class="central hidden shadowed" src="images/1P.png" />
+		<img id="p2" class="central hidden shadowed" src="images/2P.png" />
+		<img id="p3" class="central hidden shadowed" src="images/3P.png" />
+		<img id="p4" class="central hidden shadowed" src="images/4P.png" />
+		<img id="p5" class="central hidden shadowed" src="images/5P.png" />
+		<img id="p6" class="central hidden shadowed" src="images/6P.png" />
 
 	</div>
 </div>
